fixed waybar workspaces to show visible so at a glance I know which wksp is showing on second screen and same for urgent

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -67,7 +67,15 @@ window#waybar {
 }
 
 #workspaces button.active {
+    border-color: #5e81ac;
+}
+
+#workspaces button.visible {
     border-color: #81a1c1;
+}
+
+#workspaces button.urgent {
+    border-color: #bf616a;
 }
 
 #clock, #battery, #cpu, #memory,#idle_inhibitor, #temperature,#custom-keyboard-layout, #backlight, #network, #pulseaudio, #tray, #window,#custom-launcher,#custom-power,#custom-updates ,#custom-network_traffic,#custom-weather{
